# Kilt

./: .gitignore  CMakeLists.txt  Cargo.toml  DesignDocument.odt  README.md  test.code  test.kasm  test.kilt
.github/workflows/: build.yml  cmake.yml
design/: #documentation.txt#  ActionPlan.xlsx  DesignDocument-AstDiagram.odg  DesignDocument.odt  documentation.txt  projectbrief.txt
src/: main  main.cpp  main.rs
test/: test.kilt  test.kilt_temp.c
